Prepare for hosting at GitHub.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,2 +1,5 @@
+2014-08-13 v 1.0.2 Mark Grant <m.grant.prg@gmail.com>
+	* Release modified for hosting at GitHub.
+
 2014-08-07 v 1.0.1 Mark Grant <m.grant.prg@gmail.com>
 	* Initial release.
