--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-08-14 v 1.0.3 Mark Grant <m.grant.prg@gmail.com>
+	* Move distobjects (upstream program and icon) to pkgdatadir.
+
 2014-08-13 v 1.0.2 Mark Grant <m.grant.prg@gmail.com>
 	* Release modified for hosting at GitHub.
 
