--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-08-14 v 1.0.4 Mark Grant <m.grant.prg@gmail.com>
+	* Move upstream program to pkglibexecdir.
+
 2014-08-14 v 1.0.3 Mark Grant <m.grant.prg@gmail.com>
 	* Move distobjects (upstream program and icon) to pkgdatadir.
 
