--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Release 1.0.4 2014-08-14
+Move upstream program to pkglibexecdir.
+
 Release 1.0.3 2014-08-14
 Move distobjects (upstream program and icon) to pkgdatadir.
 
