--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-08-23 v 1.0.5 Mark Grant <m.grant.prg@gmail.com>
+	* Added support for architecture-dependent extrenal binaries.
+	
 2014-08-14 v 1.0.4 Mark Grant <m.grant.prg@gmail.com>
 	* Move upstream program to pkglibexecdir.
 
