--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Release 1.0.5 2014-08-23
+Added support for architecture-dependent external binaries.
+
 Release 1.0.4 2014-08-14
 Move upstream program to pkglibexecdir.
 
