--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Release 1.0.6 2014-11-29
+Add support for including overall package version in script --version.
+Switch to use of GNU getopt to allow long options and implement them.
+Allow for FreeBSD quirk of 2 different getopt programs on PATH. See comments in
+script at the start of "Main". Structure OS specific requirements to test for
+generic *BSD OSs and use Linux as the default.
+
 Release 1.0.5 2014-08-23
 Added support for architecture-dependent external binaries.
 
