--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Release 1.0.7 2015-06-27
+Remove BSD support.
+
 Release 1.0.6 2014-11-29
 Add support for including overall package version in script --version.
 Switch to use of GNU getopt to allow long options and implement them.
