--- a/ChangeLog
+++ b/ChangeLog
@@ -1,18 +1,21 @@
+2015-10-21 v 1.0.8 Mark Grant <m.grant.prg@gmail.com>
+	* Restructure to conform to AutoTools General Template v1.0.5.
+
 2015-06-27 v 1.0.7 Mark Grant <m.grant.prg@gmail.com>
 	* Remove BSD support.
 	sqlitestudio script 	now at version 1.0.5
-	
+
 2014-11-29 v 1.0.6 Mark Grant <m.grant.prg@gmail.com>
 	* Add support for including overall package version in script --version.
 	Switch to use of GNU getopt to allow long options and implement them.
-	Allow for FreeBSD quirk of 2 different getopt programs on PATH. See 
+	Allow for FreeBSD quirk of 2 different getopt programs on PATH. See
 	comments in script at the start of "Main". Structure OS specific
 	requirements to test for generic *BSD OSs and use Linux as the default.
 	sqlitestudio script now at version 1.0.4
 
 2014-08-23 v 1.0.5 Mark Grant <m.grant.prg@gmail.com>
-	* Added support for architecture-dependent extrenal binaries.
-	
+	* Added support for architecture-dependent external binaries.
+
 2014-08-14 v 1.0.4 Mark Grant <m.grant.prg@gmail.com>
 	* Move upstream program to pkglibexecdir.
 
