--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Release 1.0.8 2015-10-21
+Restructure to conform to AutoTools General Template v1.0.5.
+
 Release 1.0.7 2015-06-27
 Remove BSD support.
 
