--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,6 @@
 Release 1.0.8 2015-10-21
+Conform to AutoTools General Template v1.0.6, said release being an extension
+to include examples copied from this project.
 Restructure to conform to AutoTools General Template v1.0.5.
 
 Release 1.0.7 2015-06-27
